# Kokkos-Resilient-Spaces

./: CMakeLists.txt  README.md
applications/: CMakeLists.txt  heatdis.cpp  heatdis.hpp  stencil.cpp
applications/non-resilient/: ABFT3D.cpp  CMakeLists.txt  heatdis.cpp
applications/resilient/: ABFT3D.cpp  CMakeLists.txt  heatdis.cpp  heatdis.hpp  stencil.cpp
src/resilient_spaces/: resilient_spaces.hpp
src/resilient_spaces/replay/: parallel_for.hpp  parallel_reduce.hpp  replay_execution_space.hpp
src/resilient_spaces/replicate/: parallel_for.hpp  replicate_execution_space.hpp
src/resilient_spaces/util/: functor.hpp  traits.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  md_range_policy.cpp  range_policy.cpp  resilient_spaces.cpp
